# bazel_node

./: WORKSPACE
bazel_build_nodejs/: BUILD.bazel  WORKSPACE.bazel  app.js  es5.babelrc  package-lock.json  package.json
src/: BUILD.bazel  index.js  package.json  test.js
